# brotli-azf

./: .funcignore  .gitignore  README.md  build.sh  go.mod  go.sum  host.json  main.go  pyproject.toml
.github/workflows/: ci.yaml
dec/: __init__.py
enc/: __init__.py  config.go  handle.go  handler.go  param.go  parse.go  report.go
test/: enc_test.go  form.go
